# asio-dns-sd

./: .gitignore  CMakeLists.txt  README.md
.clangd/index/: browser.hpp.69641A3EC2CF624F.idx  compile.cpp.4E92598E6F579726.idx  dnssd.hpp.D03CCEEC75452EDD.idx  error.hpp.4AE92A509B61BFFE.idx  network_interface.hpp.5812A7C23738B482.idx  registrar.hpp.7CEC96567B595F14.idx  resolver.hpp.B5BB2298F14C2F31.idx  service.hpp.6E99B2EC28623E67.idx  service_record.hpp.ADCCA40E61CF2588.idx  transport_names.hpp.569AB7A519ED8A01.idx  txt_record.hpp.00B5AAF0EA65A642.idx  util.hpp.04E554CD1CE06A74.idx
example/: CMakeLists.txt  browse_async.cc  browse_sync.cc  custom_alloc.hpp  test.cc
include/async_dns_sd/: compile.cpp  dnssd.hpp  link.cpp
include/async_dns_sd/dnssd/: basic_service.hpp  browser.hpp  client.hpp  config.hpp  error.hpp  network_interface.hpp  resolver.hpp  service.hpp  service_record.hpp  transport_names.hpp  util.hpp  waitable_descriptor.hpp
include/async_dns_sd/dnssd/detail/: concepts.hpp  helpers.hpp  implementations.hpp
include/async_dns_sd/dnssd/detail/impl/: browser_impl_bonjour.hpp  client_impl_bonjour.hpp  impl.hpp
include/async_dns_sd/dnssd/impl/: browser_impl.hpp  browser_impl_bonjour.hpp
include/async_mdns/: compile.cpp  dnssd.hpp  mdns.hpp
include/async_mdns/dnssd/: browser.hpp  error.hpp  network_interface.hpp  service_record.hpp  util.hpp
include/async_mdns/mdns/: browser.hpp  error.hpp  network_interface.hpp  service.hpp  service_record.hpp  util.hpp
test/: CMakeLists.txt
